Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31216

Multitouch does not work on Windows Embedded Compact 7

    XMLWordPrintable

Details

    • 2b5df245d6cdbfb3150ee815debccf655af8f19f

    Description

      Multitouch does not work on Windows Embedded Compact 7, as it should be handled via GID_DIRECTMANIPULATION which does not appear to be addressed inside Qt.

      Attachments

        For Gerrit Dashboard: QTBUG-31216
        # Subject Branch Project Status CR V

        Activity

          People

            bjoern.breitmeyer Björn Breitmeyer
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes